/*
 * $Id: ChangeLog,v 1.5254 2006/11/24 23:15:37 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-11-25 18:00 UTC+0200 Pavel Tsarenko <tpe2@mail.ru>
  * source/rtl/winreg.prg
    * changed Bin2L() to Bin2U() call in the GetRegistry() function.
      The value of REG_DWORD should be unsigned

2006-11-24 19:15 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source\rtl\win32ole.prg
    ! Fixed GPF trap related to calculated class name or returned Dispatch

2006-11-22 11:51 UTC-0400 Marcelo Anelli <marceloanelli@users.sourceforge.net>
  * contrib/libnf/fttext.c
    ! Fixed function FT_FUSE: FT_USE(0) now returns next unused textarea.

2006-11-21 21:15 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source\rtl\tbrowse.prg
    * changed configure() method to call IsDb() static function to
      check what type of datasource is in use by TBrowse at first
      configuration. This is needed to reset rows if the datasource
      is an array.
    * minor adjust in CheckRowsToBeRedrawn() method.

2006-11-20 21:00 UTC+0200 Pavel Tsarenko <tpe2@mail.ru>
  * source/ct/bit2.c
    * small incompatibility with clipper in ISBIT() function with
      empty second parameter

2006-11-20 14:35 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/rtl/dllcall.c
    * Support for C Struct arguments and more complete BYREF support
      /* TODO: this is work in progress to be continued after BUG FREEZE */

2006-11-20 15:59 UTC+0200 Mindaugas Kavaliauskas <dbtopas/at/dbtopas.lt>
  * contrib/rdd_ads/adsfunc.c
    ! fixed: AdsDirectory() returns garbage in case of empty directory

2006-11-18 16:39 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/vm/classes.c
    ! Fixed: All DELEGATE messages were sent to the first "delegated"
      object.

2006-11-18 22:40 UTC+0100 Henryk Olkowski <oh1@op.pl>