@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.5254 2006/11/24 23:15:37 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.5255 2006/11/25 16:17:40 ptsarenko Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,13 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2006-11-25 21:42 UTC-0800 Luis Krause Mantilla <lkrausem /*at*/ shaw /*dot*/ ca>
+  * xharbour/contrib/rdd_ads/adsfunc.c
+    + Added missing Data Dictionary functions adsDDRemoveTable() and 
+      adsDDRemoveUserFromGroup().
+    ! Replace adsRights values with constants in ace.h (i.e. ADS_CHECKRIGHTS
+      and ADS_IGNORERIGHTS instead of 1 and 2).
 
 2006-11-25 18:00 UTC+0200 Pavel Tsarenko <tpe2@mail.ru>
   * source/rtl/winreg.prg
